src/main/java/com/example/exception/invalid/example/Main.java
package com.example.exception.invalid.example;

public class Main {
    public static void main(String[] args) {
        System.out.println("Hello world!");
    }
}